--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -25,7 +27,7 @@
                 <span class="inline-block w-8 h-8 rounded-xl bg-orange-600"></span>
                 <span class="text-xl sm:text-2xl font-bold text-orange-600 dark:text-orange-600">CARS</span>
             </a>
-            <nav class="hidden text-orange-500 md:flex items-center gap-6 text-sm text-orange-500">
+            <nav class="hidden text-orange-500 md:flex items-center gap-6 text-sm text-orange-500 dark:text-gray-400">
                 <a href="#home" class="hover:text-orange-700 dark:hover:text-orange-400">Home</a>
                 <a href="#about" class="hover:text-orange-700 dark:hover:text-orange-400">About Us</a>
                 <a href="#models" class="hover:text-orange-700 dark:hover:text-orange-400">Models</a>
@@ -59,7 +61,7 @@
         </div>
         <div id="navSearchBar" class="hidden border-t border-gray-200 dark:border-gray-800">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center gap-3">
-                <input id="navSearchInput" type="text" placeholder="Search properties by location…"
+                <input id="navSearchInput" type="text" placeholder="Search models by company…"
                     class="w-full h-11 px-4 rounded-lg bg-gray-100 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 focus:outline-none focus:ring-2 focus:ring-orange-600"
                 />
                 <button id="navSearchClose" class="h-11 px-3 rounded-lg border border-gray-200 text-orange-500 dark:border-gray-700 hover:bg-gray-100 dark:hover:bg-gray-800">
@@ -67,7 +69,7 @@
                 </button>
             </div>
         </div>
-        <div id="mobileMenu" class="md:hidden hidden px-4 pb-4 space-y-2 border-t border-gray-200 dark:border-gray-800">
+        <div id="mobileMenu" class="lg:hidden hidden px-4 pb-4 space-y-2 border-t border-gray-200 dark:border-gray-800 dark:text-gray-400">
             <a href="#home" class="block px-3 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800">Home</a>
             <a href="#about" class="block px-3 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800">About Us</a>
             <a href="#models" class="block px-3 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800">Models</a>
@@ -81,7 +83,7 @@
              alt="" class="absolute inset-0 w-full h-full object-cover">
         <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/30 to-black/60"></div>
         <div class="relative z-10 h-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center text-center">
-            <h1 class="text-white text-4xl md:text-6xl font-extrabold tracking-tight">Find your best ride</h1>
+            <h1 class="text-white text-4xl md:text-6xl mt-10 font-extrabold tracking-tight">Find your best ride</h1>
             <p class="text-white/90 mt-4 max-w-2xl">Browse what your heart needs. Stunning models, powerful engines, and real-time availability.</p>
             <div class="w-full max-w-4xl mt-8 bg-white dark:bg-gray-900 rounded-2xl shadow-xl border border-gray-200 dark:border-gray-800 p-4 md:p-6">
                 <form id="searchForm" class="w-full max-w-xl mx-auto grid grid-cols-1 sm:grid-cols-4 gap-3">
@@ -143,8 +145,8 @@
     <section id="Models" class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
         <div class="flex items-end justify-between gap-4">
             <div>
-                <h2 class="text-2xl md:text-3xl font-bold dark:text-gray-100">Featured Cars</h2>
-                <p class="text-gray-800 dark:text-gray-300">Curated rides you'll love.</p>
+                <h2 class="text-2xl text-gray-100 md:text-3xl font-bold dark:text-gray-100">Featured Cars</h2>
+                <p class="text-gray-100 dark:text-gray-300">Curated rides you'll love.</p>
             </div>
             <div class="flex items-center gap-2">
                 <label for="sortBy" class="text-sm text-gray-600 dark:text-gray-300">Sort by</label>
@@ -242,7 +244,7 @@
       <div>
         <h5 class="font-semibold">Newsletter</h5>
         <form id="newsletterForm" class="mt-2 flex flex-col sm:flex-row gap-2">
-          <input type="email" placeholder="Your email" class="flex-1 h-10 w-40 rounded-lg px-1 text-gray-900" required>
+          <input type="email" placeholder="Your email" class="flex-1 h-15 rounded-lg px-1 text-gray-900 md:w-full " required>
           <button class="h-10 px-0.5 rounded-lg bg-white text-gray-900 font-semibold">Subscribe</button>
         </form>
       </div>
